<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luan.appconcessionaria.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/txtMarca"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/spMarca">
        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtModelo"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/etModelo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTipo"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txtPassageiro"
            android:layout_marginLeft="30dp"
            android:id="@+id/rbPassageiro"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txtCarga"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/rbCarga"/>

        </RadioGroup>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Novo"
            android:layout_marginBottom="50dp"
            android:id="@+id/cbNovo"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salvar"
            android:layout_marginLeft="150dp"
            android:id="@+id/btnSalvar"/>

    </LinearLayout>
   </ScrollView>
